ajustando alguns erros

--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
-NIFI_VERSION=2.2.0
+ MINIO_VERSION=RELEASE.2025-02-28T09-55-16Z
 
-MINIO_VERSION=RELEASE.2025-02-28T09-55-16Z
-
-MONGO_VERSION=3.4.23
-
-PAGADMIN_VERSION=9.0
-MINIO_MC_VERSION=RELEASE.2025-04-08T15-39-49Z
-
-CLICK_HOUSE_VERSION=25.3
+ MINIO_MC_VERSION=RELEASE.2025-04-08T15-39-49Z
+ NIFI_VERSION=2.2.0
+ CLICK_HOUSE_VERSION=25.3
+ CONFLUENT_VERSION=7.6.1 
